June 24 2004 Menelaos Karavelas
- test suite for concatenate iterator is more verbose; also added
  test cases where at least one container is empty
- fixed bug in copy constructor and assignment operator for nested
  iterator
- added tests for assignment operator and copy constructor in nested
  iterator test suite

22 June 2004 Sylvain Pion
- G++ 3.4 test-suite fix.

16 June 2004 Menelaos Karavelas
- removed the CGAL_NO_DEPRECATED_CODE macro in Compact_container.h

20 May 2004 Sylvain Pion
- Add Compare_to_less.

27 April 2004 Sylvain Pion
- Much more symbol names shortening for Compact_container's iterators.

17 April 2004 Sylvain Pion
- Shorten symbol name CC_iterator -> CCit.

26 March 2004 Radu Ursu
-made doc work with the current implementation of the Manual tools

25 Feb 2004 Sylvain Pion
- Document Insert_iterator [bug#210].

21 Feb 2004 Sylvain Pion
- Move successor() and predecessor() from Convex_hull_2 to STL_Extension.

17 Feb 2004 Sylvain Pion
- Remove CGAL_CFG_NO_PARTIAL_CLASS_TEMPLATE_SPECIALISATION
  and associated CGAL/functional_msvc.h :)

10 February 2004 Radu Ursu
-Updated headers in examples


//---------------------------------------------------------------------
//      revision 303
//---------------------------------------------------------------------
- Remove useless reference to CGAL_CFG_ENUM_BUG

//---------------------------------------------------------------------
//      revision 302
//---------------------------------------------------------------------
- Compact_container : Remove CGAL_CFG_EARLY_INSTANTIATION_BUG workarounds.

//---------------------------------------------------------------------
//      revision 301
//---------------------------------------------------------------------
- Compact_container : mark some code as deprecated, and optimize
  construct_insert() by taking reference arguments...

//---------------------------------------------------------------------
//      revision 300